# TestAnySources

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  build_project.sh  clear_intermediate_files.bat  clear_intermediate_files.sh  update_submodules.bat  update_submodules.sh
include/modules/: LongSymbolsNormalizer.hpp  TestFile.hpp
src/: main.cpp
src/modules/: LongSymbolsNormalizer.cpp  TestFile.cpp
tests/unit/: LongSymbolsNormalizerTest.cpp  SimpleTest.cpp
